Switch back to DataTypeConverter for signature coversion